2010-05-29	Matt Burgess <matthew@linuxfromscratch.org>
   * lfs/init.d/udev: Only copy /lib/udev/devices/null, as Udev >= 155 copies
     devices from /lib/udev/devices to /dev itself.  Udevd still needs /dev/null
     present before starting up though.

2010-04-20	Bryan Kadzban <bryan@linuxfromscratch.org>
   * lfs/init.d/udev, lfs/init.d/udev_retry: Add --action=add, to handle udev
   version 152 and newer, which send "change" events by default in udevtrigger
   now.

2010-01-24  Matthew Burgess <matthew@linuxfromscratch.org>
   * lfs/init.d/udev: Check to see if /dev is already mounted, as it may be if
     under an initramfs environment.  See ticket #2550.

2009-08-14  Bryan Kadzban <bryan@linuxfromscratch.org>
   * lfs/init.d/udev_retry: Use "udevadm trigger --type=failed", which
     apparently replaced "--retry-failed" some time ago.  "--retry-failed" is
     removed in udev-146.

2009-01-02  Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * lfs/init.d/functions:
   * lfs/sysconfig/network-devices/ifup: 
     Updated line widths to accomodate pdf generation in both the above 
     files.

2008-10-27  DJ Lucas <dj@linuxfromscratch.org>
   * lfs/init.d/cleanfs: Removed '! -newer /proc' from find commands in
     check for stale files in /var/lock and /var/run.
   * Makefile: Reversed cleanfs and udev_retry scripts so that cleanfs
     runs immediately after mountfs.

2008-10-26  Dan Nicholson  <dnicholson@linuxfromscratch.org>
   * lfs/init.d/functions: Remove stale pid files when encountered
     in loadproc/killproc/reloadproc. When the bootscript specifies
     a pid file to use with the "-p pidfile" argument, *proc
     functions previously bailed out when the referenced file
     contains an invalid pid.

2008-10-23  DJ Lucas <dj@linuxfromscratch.org>
   * lfs/init.d/console: Removed BROKEN_COMPOSE as kernel patch has
     been accepted upstream.

2008-05-21  Bryan Kadzban  <bryan@linuxfromscratch.org>