@@ -11,7 +11,7 @@
   <!ENTITY localnet           SYSTEM "localnet.script"> 
   <!ENTITY modules            SYSTEM "modules.script"> 
   <!ENTITY mountfs            SYSTEM "mountfs.script"> 
-  <!ENTITY mountkernfs        SYSTEM "mountkernfs.script"> 
+  <!ENTITY mountvirtfs        SYSTEM "mountvirtfs.script"> 
   <!ENTITY network            SYSTEM "network.script"> 
   <!ENTITY reboot             SYSTEM "reboot.script"> 
   <!ENTITY rc                 SYSTEM "rc.script"> 
@@ -62,9 +62,9 @@
     <screen>&functions;</screen> 
   </sect1>
 
-  <sect1 id="mountkernfs" role="wrap">
-    <title>/etc/rc.d/init.d/mountkernfs</title>
-    <screen>&mountkernfs;</screen> 
+  <sect1 id="mountvirtfs" role="wrap">
+    <title>/etc/rc.d/init.d/mountvirtfs</title>
+    <screen>&mountvirtfs;</screen> 
   </sect1>
 
   <sect1 id="consolelog" role="wrap">
