@@ -1,8 +1,8 @@
 #!/bin/sh
 ########################################################################
-# Begin $rc_base/init.d/mountkernfs
+# Begin $rc_base/init.d/mountvirtfs
 #
-# Description : Mount proc and sysfs
+# Description : Mount proc, sysfs, and run
 #
 # Authors     : Gerard Beekmans - gerard@linuxfromscratch.org
 #
@@ -17,7 +17,7 @@
 
 case "${1}" in
 	start)
-		boot_mesg -n "Mounting kernel-based file systems:" ${INFO}
+		boot_mesg -n "Mounting virtual file systems:" ${INFO}
 
 		if ! mountpoint /proc >/dev/null; then
 			boot_mesg -n " /proc" ${NORMAL}
@@ -27,6 +27,13 @@ case "${1}" in
 		if ! mountpoint /sys >/dev/null; then
 			boot_mesg -n " /sys" ${NORMAL}
 			mount -n /sys || failed=1
+		fi
+
+		if ! mountpoint /run >/dev/null; then
+			boot_mesg -n " /run" ${NORMAL}
+			mount -n /run || failed=1
+			mkdir /run/var
+			mkdir /run/shm
 		fi
 
 		boot_mesg "" ${NORMAL}
@@ -41,4 +48,4 @@ case "${1}" in
 		;;
 esac
 
-# End $rc_base/init.d/mountkernfs
+# End $rc_base/init.d/mountvertfs
